--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
 		"start": "node server.js"
 	},
 	"dependencies": {
+		"body-parser": "^1.15.2",
+		"dotenv": "^6.2.0",
 		"express": "^4.12.4",
-		"body-parser": "^1.15.2"
+		"mongodb": "latest",
+		"mongoose": "latest"
 	},
 	"engines": {
 		"node": "4.4.5"
